Add from|to published_year filter for books
